[workspace]
members = ["bitset", "channel", "future", "io", "log", "utils"]
exclude = ["meta", "path"]
resolver = "3"

[workspace.dependencies]
bitset.path = "bitset"
channel.path = "channel"
future.path = "future"
io.path = "io"
log.path = "log"
meta.path = "meta"
path.path = "path"
parking_lot = "0.12"
