[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
bitset = { workspace = true, optional = true }
channel = { workspace = true, optional = true }
future = { workspace = true, optional = true }
io = { workspace = true, optional = true }
log = { workspace = true, optional = true }
meta = { workspace = true, optional = true }
path = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

[features]
default = ["bitset", "channel", "io", "log", "path", "sync"]

bitset = ["dep:bitset"]
channel = ["dep:channel"]
future = ["dep:future"]
io = ["dep:io"]
log = ["dep:log"]
meta = ["dep:meta"]
path = ["dep:path"]
sync = ["dep:parking_lot"]
